[project]
name = "function"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.10.0",
  "numpy>=2.0.2",
  "scikit-learn>=1.6.1",
  "tensorflow>=2.18.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.setuptools]
py-modules = []
